--- a/app/views/exam/_grouped_exam_report.erb
+++ b/app/views/exam/_grouped_exam_report.erb
@@ -77,6 +77,7 @@
     </table>
   </div>
 <% else %>
+ <% all_exams = @exam_groups.reject{|ex| ex.exam_type == "Grades"} %>
   <div id="score-table">
     <table id="listing" width="100%">
       <div class="custom_header">
@@ -87,7 +88,9 @@
         <% @exam_groups.each do |exam_group| %>
           <td><%= exam_group.name %></td>
         <% end %>
-        <td><%= t('total') %></td>
+        <% unless all_exams.empty? %>
+          <td><%= t('total') %></td>
+        <% end %>
       </tr>
       <% @subjects.each do |subject| %>
         <tr class="tr-<%= cycle('odd', 'even') %>">
@@ -114,10 +117,12 @@
             <% end %>
           </td>
           <% total_score = ExamScore.new() %>
-          <% if @mmg == @g %>
-            <td class="col-1"><%= total_score.grouped_exam_subject_total(subject,@student,@type) %></td>
-          <% else %>
-            <td class="col-1">-</td>
+          <% unless all_exams.empty? %>
+            <% if @mmg == @g %>
+              <td class="col-1"><%= total_score.grouped_exam_subject_total(subject,@student,@type) %></td>
+            <% else %>
+              <td class="col-1">-</td>
+            <% end %>
           <% end %>
         </tr>
 
@@ -140,7 +145,9 @@
             <% @marks_total = @marks_total + exam_group.total_marks(@student)[0] %>
           <% end %>
         <% end %>
-        <td></td>
+        <% unless all_exams.empty? %>
+          <td></td>
+        <% end %>
       </tr>
       <tr></tr>
     </table>
@@ -153,5 +160,5 @@
   </div>
 <% end %>
 <%= link_to " ► #{t('pdf_report')}",
-    { :action => "generated_report4_pdf", :batch_id => @batch.id, :student=>@student.id, :type=> @type},:target => '_blank', :class=> 'user_button' %>
+  { :action => "generated_report4_pdf", :batch_id => @batch.id, :student=>@student.id, :type=> @type},:target => '_blank', :class=> 'user_button' %>
 <div class="extender"></div>
