--- a/app/views/exam/grouping.html.erb
+++ b/app/views/exam/grouping.html.erb
@@ -82,13 +82,13 @@
       val.value="0";
     }
     if (parseFloat(val.value)>100)
-      {
-        alert("Weightage cannot be greater than 100%");
+    {
+      alert("Weightage cannot be greater than 100%");
       val.value="0";
-      }
-      make_total(cnt);
+    }
+    make_total(cnt);
   }
-  </script>
+</script>
 <div id="content-header">
   <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
@@ -103,67 +103,68 @@
   <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-  <div id="application-list">
-    <h4><%= t('connect_exams') %></h4>
-        <%#*<div class="sel-list">%>
-          <%#= t('select') %><%#: <%= link_to_function t('all'), "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>
-          <%#= link_to_function t('none'), "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
-        <%#*</div>%>
-        <% unless @exam_groups.empty? %>
-          <% form_for :exam_grouping do |f| %>
-            <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
-              <% count=@exam_groups.count.to_i - 1 %>
-              <tr class="tr-head">
-                <td class="col-1"><%= check_box_tag 'chck1','yes', false,{:onClick=> "check_all_or_none(#{count})"} %></td>
-                <td class="col-2">
-                  <%= t('exam_group') %>
-                </td>
-                <td class="col-3">
-                  <%= t('weightage') %>(%)
-                </td>
-              </tr>
-              <tr class="tr-blank"></tr>
-              <% i=0 %>
-              <% total = 0 %>
-              <% @exam_groups.each do |e| %>
-                <tr class="tr-<%= cycle('odd', 'even') %>">
-                  <% already_grouped = GroupedExam.find_by_batch_id_and_exam_group_id(@batch.id,e) %>
-                  <% is_already_grouped = already_grouped.present? %>
-                  <td class="col-1"><%= check_box_tag "exam_grouping[exam_group_ids][]", e.id,is_already_grouped,{:class=>'right',:id=>"check#{i}",:onClick=>"set_weightage(this,#{count})"} %></td>
-                  <td class="col-2"><%= e.name %></td>
-                  <% if is_already_grouped==true %>
-                  <td class="col-3"><%=text_field_tag 'weightage[]',already_grouped.weightage,:class=>'total-box',:id=>"weightage#{i}",:onchange=>"check_weightage(this,#{count})"%></td>
-                  <% total += already_grouped.weightage  if already_grouped.weightage.present? %>
-                  <% else %>
-                  <td class="col-3"><%=text_field_tag 'weightage[]',"0",:class=>'total-box',:disabled=>true,:id=>"weightage#{i}",:onchange=>"check_weightage(this,#{count})"%></td>
-                  <% end %>
-                </tr>
-                <% i=i+1 %>
+  <div id="application-list"> 
+<%#*<div class="sel-list">%>
+<%#= t('select') %><%#: <%= link_to_function t('all'), "$$('input.right').each(function(checkbox) { checkbox.checked = true; });" %>
+<%#= link_to_function t('none'), "$$('input.right').each(function(checkbox) { checkbox.checked = false; });" %>
+<%#*</div>%>
+    <% unless @exam_groups.empty? %>
+      <h4><%= t('connect_exams') %></h4>
+      <% form_for :exam_grouping do |f| %>
+        <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
+          <% count=@exam_groups.count.to_i - 1 %>
+          <tr class="tr-head">
+            <td class="col-1"><%= check_box_tag 'chck1','yes', false,{:onClick=> "check_all_or_none(#{count})"} %></td>
+            <td class="col-2">
+              <%= t('exam_group') %>
+            </td>
+            <td class="col-3">
+              <%= t('weightage') %>(%)
+            </td>
+          </tr>
+          <tr class="tr-blank"></tr>
+          <% i=0 %>
+          <% total = 0 %>
+          <% @exam_groups.each do |e| %>
+            <tr class="tr-<%= cycle('odd', 'even') %>">
+              <% already_grouped = GroupedExam.find_by_batch_id_and_exam_group_id(@batch.id,e) %>
+              <% is_already_grouped = already_grouped.present? %>
+              <td class="col-1"><%= check_box_tag "exam_grouping[exam_group_ids][]", e.id,is_already_grouped,{:class=>'right',:id=>"check#{i}",:onClick=>"set_weightage(this,#{count})"} %></td>
+              <td class="col-2"><%= e.name %></td>
+              <% if is_already_grouped==true %>
+                <td class="col-3"><%=text_field_tag 'weightage[]',already_grouped.weightage,:class=>'total-box',:id=>"weightage#{i}",:onchange=>"check_weightage(this,#{count})"%></td>
+                <% total += already_grouped.weightage  if already_grouped.weightage.present? %>
+              <% else %>
+                <td class="col-3"><%=text_field_tag 'weightage[]',"0",:class=>'total-box',:disabled=>true,:id=>"weightage#{i}",:onchange=>"check_weightage(this,#{count})"%></td>
               <% end %>
-              <tr class="tr-blank"></tr>
-              <tr class="tr-head">
-                <td class="col-4" colspan="2">
-                  <%= t('total_weghtage') %>
-                </td>
-                <td class="col-3">
-                  <%=label_tag 'total',total,:id=>"tot"%>
-                </td>
-              </tr>
-            </table>
-            <%#*<div class="name_list<%=cycle('odd', 'even')%>
-              <%# already_grouped = GroupedExam.find_by_batch_id_and_exam_group_id(@batch.id,e) %>
-              <%# already_grouped = already_grouped.present? %>
-              <%#*<li><label><%= check_box_tag "exam_grouping[exam_group_ids][]", e.id,already_grouped,:class=>"right"%><%#<div class="att_list_names"> <%= e.name %><%#</div></label></li>%>
-            <%#*</div>%>
-          <%# end %>
+            </tr>
+            <% i=i+1 %>
+          <% end %>
+          <tr class="tr-blank"></tr>
+          <tr class="tr-head">
+            <td class="col-4" colspan="2">
+              <%= t('total_weghtage') %>
+            </td>
+            <td class="col-3">
+              <%=label_tag 'total',total,:id=>"tot"%>
+            </td>
+          </tr>
+        </table>
+    <%#*<div class="name_list<%=cycle('odd', 'even')%>
+    <%# already_grouped = GroupedExam.find_by_batch_id_and_exam_group_id(@batch.id,e) %>
+    <%# already_grouped = already_grouped.present? %>
+    <%#*<li><label><%= check_box_tag "exam_grouping[exam_group_ids][]", e.id,already_grouped,:class=>"right"%><%#<div class="att_list_names"> <%= e.name %><%#</div></label></li>%>
+    <%#*</div>%>
+    <%# end %>
 
-          <%= submit_tag "", :value => "#{t('save')}", :class => "submit_button" %>
-        <% end %>
-
+        <%= submit_tag "", :value => "#{t('save')}", :class => "submit_button" %>
       <% end %>
+    <% else %>
+      <p class="flash-msg">No valid exams available to connect.</p>
+    <% end %>
 
 
-      <div class="extender"></div>
+    <div class="extender"></div>
   </div>
 </div>
 
