added cancel button in ranking levels page [fixed #3169]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3418 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/ranking_levels/_course_ranking_levels.html.erb
+++ b/app/views/ranking_levels/_course_ranking_levels.html.erb
@@ -39,6 +39,8 @@
 
       <div id="submit-button">
         <%=submit_tag("► #{t('create_text')}") %>
+        <%= link_to_remote " ► Cancel",
+ :url=>{ :action => "ranking_level_cancel", :course_id=>@course.id},:html=>{ :class=> 'user_button'} %>
       </div>
 
 
