--- a/app/views/ranking_levels/_rank_form.html.erb
+++ b/app/views/ranking_levels/_rank_form.html.erb
@@ -37,6 +37,8 @@
 
     <div id="submit-button">
       <%=submit_tag("► #{t('create_text')}") %>
+      <%= link_to_remote " ► Cancel",
+       :url=> { :action => "ranking_level_cancel", :course_id=>@course.id},:html=>{ :class=> 'user_button'} %>
     </div>
 
 
