fixed page break issue in combined report pdf [fixed #3109]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3419 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/exam/student_combined_report_pdf.css
+++ b/public/stylesheets/exam/student_combined_report_pdf.css
@@ -99,7 +99,7 @@ tr.odd{
 }
 table#pdf-table{
     border: 1px solid #ADACAB;
-    border-collapse:collapse
+    border-collapse:collapse;
 }
 /*.header-content{
     color: #97080e;
@@ -145,4 +145,9 @@ table#pdf-table{
     height: 240px;
     border: 1px solid #fff;
     border-bottom: 1px solid #ADACAB;
+}
+.page {
+    width:800px;
+    margin: 0 auto;
+    overflow: hidden;
 }
