fixed page break issue in school rank pdf [fixed #3309]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3423 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/exam/student_school_rank_pdf.css
+++ b/public/stylesheets/exam/student_school_rank_pdf.css
@@ -146,3 +146,8 @@ table#pdf-table{
     border: 1px solid #fff;
     border-bottom: 1px solid #ADACAB;
 }
+.page {
+    width:800px;
+    margin: 0 auto;
+    overflow: hidden;
+}
