--- a/app/views/exam/student_school_rank_pdf.html.erb
+++ b/app/views/exam/student_school_rank_pdf.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 
-<div id="page-yield">
+<div id="page-yield" class="available_sections">
   <div class="hor_line"></div>
 
   <div class="extender"> </div>
@@ -26,7 +26,7 @@
     <div id ="main_info">
       <h3><%= t('overall_school_rankings') %> : <%= Configuration.find_by_config_key("InstitutionName").config_value.present? ? Configuration.find_by_config_key("InstitutionName").config_value : "-" %></h3>
     </div>
-    <div id="pdf-info">
+    <div id="pdf-info" class="section">
       <% unless @courses.empty? %>
         <% unless @students.empty? %>
           <% unless @grouped_exams.empty? %>
@@ -42,52 +42,54 @@
               <% student_scores << [student.id,marks] %>
             <% end %>
             <% ordered_scores = ordered_scores.compact.uniq.sort.reverse %>
-          <% c = 'even' %>
-          <table id="pdf-table" width="100%" cellspacing="0">
-            <tr class="table-header">
-              <td><%= t('sl_no') %></td>
-              <td><%= t('name') %></td>
-              <td><%= t('batch') %></td>
-              <td><%= t('adm_no') %></td>
-              <td><%= t('marks') %></td>
-              <td><%= t('rank') %></td>
-            </tr>
-            <% i = 0 %>
-            <% @students.each_with_index do |student,ind| %>
-              <% percentage = 0 %>
-              <% if i== 23 %>
-                <% i= 0 %>
-                <tr class="page-break"><td colspan="3"></td></tr>
-
-                <tr class="table-header">
-                  <td><%= t('sl_no') %></td>
-                  <td><%= t('name') %></td>
-                  <td><%= t('batch') %></td>
-                  <td><%= t('adm_no') %></td>
-                  <td><%= t('marks') %></td>
-                  <td><%= t('rank') %></td>
-                </tr>
-
-              <% end %>
-              <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
-                <td class="col-pdf"><%= ind+1 %></td>
-                <td class="col-pdf"><%= student.full_name %></td>
-                <td class="col-pdf"><%= student.batch.full_name %></td>
-                <td class="col-pdf"><%= student.admission_no.present? ? student.admission_no : "-" %></td>
-                <% student_scores.each do|student_score| %>
-                  <% if student_score[0]==student.id %>
-                    <% percentage = student_score[1] %>
-                  <% end %>
-                <% end %>
-                <td class="col-pdf"><%= percentage %></td>
-                <td class="col-pdf"><%= ordered_scores.index(percentage) ? ordered_scores.index(percentage) + 1 : "-" %></td>
+            <% c = 'even' %>
+            <% page_val=26 %>
+            <% i=0 %>
+            <table id="pdf-table" width="100%" cellspacing="0">
+              <tr class="table-header">
+                <td><%= t('sl_no') %></td>
+                <td><%= t('name') %></td>
+                <td><%= t('batch') %></td>
+                <td><%= t('adm_no') %></td>
+                <td><%= t('marks') %></td>
+                <td><%= t('rank') %></td>
               </tr>
-              <% i+=1 %>
-            <% end %>
-          </table>
-      <% else %>
-          <p class="flash-msg"><%= t('no_grouped_exams_in_this_school') %></p>
-        <% end %>
+              <% @students.each_with_index do |student,ind| %>
+                <% percentage = 0 %>
+                <% if (i+1)%(page_val.to_i) == 0 %>
+                  <% i=0 %>
+                  <% page_val=28 %>
+                </table>
+                <table id="pdf-table" width="100%" cellspacing="0" class="section">
+                  <tr class="table-header">
+                    <td><%= t('sl_no') %></td>
+                    <td><%= t('name') %></td>
+                    <td><%= t('batch') %></td>
+                    <td><%= t('adm_no') %></td>
+                    <td><%= t('marks') %></td>
+                    <td><%= t('rank') %></td>
+                  </tr>
+
+                <% end %>
+                  <% i=i+1 %>
+                <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
+                  <td class="col-pdf"><%= ind+1 %></td>
+                  <td class="col-pdf"><%= student.full_name %></td>
+                  <td class="col-pdf"><%= student.batch.full_name %></td>
+                  <td class="col-pdf"><%= student.admission_no.present? ? student.admission_no : "-" %></td>
+                  <% student_scores.each do|student_score| %>
+                    <% if student_score[0]==student.id %>
+                      <% percentage = student_score[1] %>
+                    <% end %>
+                  <% end %>
+                  <td class="col-pdf"><%= percentage %></td>
+                  <td class="col-pdf"><%= ordered_scores.index(percentage) ? ordered_scores.index(percentage) + 1 : "-" %></td>
+                </tr>
+              <% end %>
+            </table>
+          <% else %>
+            <p class="flash-msg"><%= t('no_grouped_exams_in_this_school') %></p>
+          <% end %>
         <% else %>
           <p class="flash-msg"><%= t('no_students_in_this_school') %></p>
         <% end %>
