--- a/app/views/exam/combined_grouped_exam_report_pdf.html.erb
+++ b/app/views/exam/combined_grouped_exam_report_pdf.html.erb
@@ -50,7 +50,7 @@
             <table id="pdf-table" width="100%" cellspacing="0">
               <tr class="table-header">
                 <td><%= t('subject') %></td>
-                <% if @batch.grading_type=="1" or @batch.grading_type=="2" %>
+                <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
                   <td><%= t('credit') %></td>
                 <% end %>
                 <% @exam_groups.each do |exam_group| %>
@@ -62,7 +62,7 @@
               <% @subjects.each do |subject| %>
                 <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
                   <td class="col-pdf" ><%= subject.name %></td>
-                  <% if @batch.grading_type=="1" or @batch.grading_type=="2" %>
+                  <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
                     <td class="col-pdf"><%= subject.credit_hours.present? ? subject.credit_hours : "-" %></td>
                   <% end %>
                   <% @exam_groups.each do |exam_group| %>
@@ -70,9 +70,9 @@
                     <% @exam = Exam.find_by_subject_id_and_exam_group_id(subject.id,exam_group.id) %>
                     <% exam_score = ExamScore.find_by_student_id(student.id, :conditions=>{:exam_id=>@exam.id})unless @exam.nil? %>
                     <td class="col-pdf">
-                      <% if @batch.grading_type=="1" %>
+                      <% if @batch.gpa_enabled? %>
                         <%= exam_score.present? ? "#{exam_score.grading_level || "-"}"+" ["+"#{exam_score.grading_level.present? ? (exam_score.grading_level.credit_points || "-") : "-"}"+"]" : "-" %>
-                      <% elsif @batch.grading_type=="2" %>
+                      <% elsif @batch.cwa_enabled? %>
                         <%= exam_score.present? ? "#{exam_score.marks.present? ? ("%.2f" %((exam_score.marks.to_f/@exam.maximum_marks.to_f)*100)) : "-"}"+" ["+"#{exam_score.grading_level.present? ? exam_score.grading_level : "-"}"+"]" : "-" %>
                       <% else %>
                         <% if exam_group.exam_type == "MarksAndGrades" %>
@@ -90,9 +90,9 @@
                 </tr>
               <% end %>
               <tr class="table-header">
-                <% if @batch.grading_type=="1" %>
+                <% if @batch.gpa_enabled? %>
                   <td colspan="2" align="right"><%= t('gpa') %></td>
-                <% elsif @batch.grading_type=="2" %>
+                <% elsif @batch.cwa_enabled? %>
                   <td colspan="2" align="right"><%= t('weighted_average') %></td>
                 <% else %>
                   <td align="right"><%= t('percentage') %></td>
