--- a/app/views/exam/_exam_marks_form.erb
+++ b/app/views/exam/_exam_marks_form.erb
@@ -49,7 +49,7 @@
       <%= f.label :minimum_marks, t('min_mark') %>
       <div class="text-input-bg"> <%= f.text_field :minimum_marks %></div>
     </div>
-  <%# if @batch.grading_type=="1" %>
+  <%# if @batch.gpa_enabled? %>
   <%#*<div class="label-field-pair">%>
   <%#= f.label :is_final_exam, t('is_final_exam') %>
   <%#*<div class="text-input-bg"> <%= f.check_box :is_final_exam %>
