--- a/app/views/exam/generated_report_pdf.erb
+++ b/app/views/exam/generated_report_pdf.erb
@@ -141,7 +141,7 @@
                   <td class="col-pdf"><%= exam.subject.code %></td>
                   <td class="col-pdf"><%= exam.subject.name %></td>
                   <td class="col-pdf"><%= exam.subject.credit_hours %></td>
-                  <td class="col-pdf"><%= exam_score.present? ? (exam_score.grading_level.present? ? exam_score.grading_level : "-") : "-" %></td>
+                  <td class="col-pdf"><%= exam_score.present? ?  ("#{exam_score.grading_level.present? ? exam_score.grading_level : "-"}"+" ["+"#{exam_score.grading_level.present? ? (exam_score.grading_level.credit_points.present? ? exam_score.grading_level.credit_points : "-") : "-"}"+"]") : "-" %></td>
                   <td class="col-pdf"><%= exam_score.present? ? (exam_score.grading_level.present? ? (exam_score.grading_level.description.present? ? exam_score.grading_level.description : "-") : "-") : "-" %></td>
                 </tr>
               <% end %>
