--- a/app/views/attendance_reports/_report.html.erb
+++ b/app/views/attendance_reports/_report.html.erb
@@ -64,7 +64,7 @@
       </tr>
     <% end %>
   </table>
-  <% form_for :filter, :url => {:action=> 'report_pdf'} do |f| %>
+  <% form_for :filter, :url => {:action=> 'report_pdf'},:html=>{:target => '_blank'} do |f| %>
     <%= f.hidden_field :batch , :value=> @batch.id %>
     <%= f.hidden_field :start_date , :value=> @start_date %>
     <%= f.hidden_field :end_date , :value=> @end_date %>
