overflow x auto instead of scroll
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3432 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/timetable/employee_timetable.css
+++ b/public/stylesheets/timetable/employee_timetable.css
@@ -59,7 +59,7 @@ padding-left: 0px;
 #table-viewer{
 /*    height:480px;*/
     margin-left: 0px;
-    overflow-x: scroll;
+    overflow-x: auto;
     width: 810px;
     float: left;
 }
