privilage correcion in main menu partial
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3434 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -17,10 +17,10 @@
     <% @employee_batches=Batch.find_all_by_employee_id(@employee.id) %>
     <% @attendance_type = Configuration.find_by_config_key('StudentAttendanceType') %>
     <% if @attendance_type.config_value == 'Daily' %>
-      <% if permitted_to? :index, :student_attendance or @employee_batches.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+      <% if permitted_to? :index, :student_attendance or @employee_batches.present? or @current_user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @current_user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
         <li class="a"><%= link_to "#{t('attendance')} ▼", :controller => "student_attendance", :action => "index" %>
           <ul class="level-1">
-            <% if @employee_batches.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+            <% if @employee_batches.present? or @current_user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
               <li><%= link_to "#{t('attendance_register')}", :controller => 'attendances', :action => 'index'  %></li>
             <% end %>
             <li><%= link_to "#{t('attendance_report')}", :controller => "attendance_reports", :action => "index" %></li>
@@ -28,10 +28,10 @@
         </li>
       <% end %>
     <% else %>
-      <% if permitted_to? :index, :student_attendance or @employee_batches.present? or @employee_subjects.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+      <% if permitted_to? :index, :student_attendance or @employee_batches.present? or @employee_subjects.present? or @current_user.privileges.map{|p| p.name}.include?("StudentAttendanceView") or @current_user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
         <li class="a"><%= link_to "#{t('attendance')} ▼", :controller => "student_attendance", :action => "index" %>
           <ul class="level-1">
-            <% if @employee_batches.present? or @employee_subjects.present? or @user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
+            <% if @employee_batches.present? or @employee_subjects.present? or @current_user.privileges.map{|p| p.name}.include?("StudentAttendanceRegister") %>
               <li><%= link_to "#{t('attendance_register')}", :controller => 'attendances', :action => 'index'  %></li>
             <% end %>
             <li><%= link_to "#{t('attendance_report')}", :controller => "attendance_reports", :action => "index" %></li>
