[FIXES BUG #3325] show batches in alphabetical order--Exams --Create Exam page
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3436 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/create_exam.html.erb
+++ b/app/views/exam/create_exam.html.erb
@@ -41,7 +41,7 @@
    </label>
    <div class="text-input-bg">
   <%= select :courses, :name,
-        Course.active.map {|b| [b.code, b.id]},
+        @course.map {|b| [b.code, b.id]},
         {:prompt => "#{t('select_a_course')}"},
         {:onChange => "#{remote_function(:url => {:action => "update_batch"},
         :with => "'course_name='+ value",
