--- a/app/views/exam/student_ranking_level_report_pdf.html.erb
+++ b/app/views/exam/student_ranking_level_report_pdf.html.erb
@@ -209,10 +209,10 @@
               <% end %>
             </table>
           <% else %>
-            <p class="flash-msg"><%= "#{t('no')} #{@ranking_level.name} #{t('students_found')}" %></p>
+            <p class="flash-msg"><%= "#{t('no_text')} #{@ranking_level.name} #{t('students_found')}" %></p>
           <% end %>
         <% else %>
-          <p class="flash-msg"><%= "#{t('no')} #{@ranking_level.name} #{t('students_found')}" %></p>
+          <p class="flash-msg"><%= "#{t('no_text')} #{@ranking_level.name} #{t('students_found')}" %></p>
         <% end %>
       </div>
     <% end %>
