--- a/app/views/exam/create_exam.html.erb
+++ b/app/views/exam/create_exam.html.erb
@@ -18,7 +18,7 @@
 #under the License. -%>
 
 <div id="content-header">
-<%= image_tag("/images/examination/show_exam.png") %>
+  <%= image_tag("/images/examination/show_exam.png") %>
   <h1><%= t('exams_text') %></h1>
   <h3><%= t('create_exam') %></h3>
   <div id="app-back-button">
@@ -27,29 +27,31 @@
 </div>
 <div id="inner-tab-menu">
   <ul>
-    <li><%= link_to "#{t('previous_batch_exam')}", {:controller => "exam", :action => "previous_batch_exams"}, :class=> 'user_button' %></li>
+    <% if permitted_to? :previous_batch_exams, :exam %>
+      <li><%= link_to "#{t('previous_batch_exam')}", {:controller => "exam", :action => "previous_batch_exams"}, :class=> 'user_button' %></li>
+    <% end %>
   </ul>
 </div>
 <div id="page-yield">
-    <% unless flash[:notice].nil? %>
+  <% unless flash[:notice].nil? %>
     <p class="flash-msg"> <%= flash[:notice] %> </p>
   <% end %>
-<div class="box">
-     <div class="label-field-pair">
-   <label for="student_course"><%= t('select_a_course') %>:
-<%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
-   </label>
-   <div class="text-input-bg">
-  <%= select :courses, :name,
-        @course.map {|b| [b.code, b.id]},
-        {:prompt => "#{t('select_a_course')}"},
-        {:onChange => "#{remote_function(:url => {:action => "update_batch"},
-        :with => "'course_name='+ value",
-        :before => "Element.show('loader')",
-        :success => "Element.hide('loader')"
-        )}"} %>
-</div></div>
+  <div class="box">
+    <div class="label-field-pair">
+      <label for="student_course"><%= t('select_a_course') %>:
+        <%= image_tag("loader.gif",:align => "absmiddle",:border => 0,:id => "loader", :style =>"display: none;" ) %>
+      </label>
+      <div class="text-input-bg">
+        <%= select :courses, :name,
+          @course.map {|b| [b.code, b.id]},
+          {:prompt => "#{t('select_a_course')}"},
+          {:onChange => "#{remote_function(:url => {:action => "update_batch"},
+          :with => "'course_name='+ value",
+          :before => "Element.show('loader')",
+          :success => "Element.hide('loader')"
+          )}"} %>
+      </div></div>
 
-<div id="update_batch"></div>
-<div class="extender"></div>
- </div></div>
+    <div id="update_batch"></div>
+    <div class="extender"></div>
+  </div></div>
