RTL Style issue in login page fixes #3329
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3443 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/rtl/_layouts/login.css
+++ b/public/stylesheets/rtl/_layouts/login.css
@@ -35,8 +35,8 @@ body {
 #submit_area input {
     background:#312d2a;
     height:38px;
-    float:right;
-    margin-right:170px;
+    float:left;
+    margin-left:65px;
     margin-top:55px;
     border:none;
     color:#fff;
