--- a/app/views/employee_attendance/leaves.erb
+++ b/app/views/employee_attendance/leaves.erb
@@ -85,11 +85,11 @@
 
       <div class="label-field-pair">
         <label for="start_date"><%= t('start_date') %></label>
-        <div class="text-input-bg"><%= calendar_date_select_tag 'leave_apply[start_date]'  %></div>
+        <div class="text-input-bg"><%= calendar_date_select_tag 'leave_apply[start_date]' ,I18n.l(Date.today, :format=>:default),:popup=>:force  %></div>
       </div>
       <div class="label-field-pair">
         <label for="end_date"><%= t('end_date') %>:</label>
-        <div class="text-input-bg"><%= calendar_date_select_tag 'leave_apply[end_date]'  %></div>
+        <div class="text-input-bg"><%= calendar_date_select_tag 'leave_apply[end_date]' ,I18n.l(Date.today, :format=>:default),:popup=>:force   %></div>
       </div>
       <div class="label-field-pair">
         <label for="reason"><%= t('reason') %>:</label>
